Вынес в контроллер админки - административные функции. Оставил в контроллере аутентийикации только то что касается обработки аутентификации. Изменения в панели администратора - добавление функций в админку. Добавил конфиг пагинации с предопределенными параметрами для работы c bootstrap. TODO: доделать разделение аутентификации и админки.

--- a/assets/css/themes/united/bootstrap.css
+++ b/assets/css/themes/united/bootstrap.css
@@ -4961,6 +4961,7 @@ a.badge:hover {
   border-radius: 4px;
 }
 .accordion-heading {
+  background-color: #eee;
   border-bottom: 0;
 }
 .accordion-heading .accordion-toggle {
@@ -4973,6 +4974,9 @@ a.badge:hover {
 .accordion-inner {
   padding: 9px 15px;
   border-top: 1px solid #e5e5e5;
+}
+.accordion-toggle {
+  cursor: pointer;
 }
 .carousel {
   position: relative;
